--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -6,7 +6,7 @@
   "HostColor": "#4bf4ff",
   "Icon": "♥",
   "NameColor": "#00ffa5",
-  "SubText.Crewmate": "Найди и выкини всех <color=#ff1919>Убийц</color>",
+  "SubText.Crewmate": "Найди и выкини всех <color=#ff1919>убийц</color>",
   "SubText.Impostor": "Убивай и саботируй",
   "SubText.Neutral": "Играй в одиночку",
   "SubText.Madmate": "Помоги <color=#ff1919>Предателям</color> победить",
@@ -1173,6 +1173,7 @@
   "Cooldown": "Откат",
   "CurseCooldown": "Откат проклятия",
   "FreezeAfterCurseKill": "Замораживать после убийства проклятым игроком",
+  "DecreasedKillCooldown": "Уменьшенный откат убийства",
   "KillCooldown": "Откат убийства",
   "VentCooldown": "Откат использование люка",
   "MaxInVentTime": "Макс. время в люке",
@@ -3134,6 +3135,16 @@
   "GamblerGet.Freeze": "<color=#ffffff><color=#ffa500>Эффект:</color> Заморозка (на <color=#ffa500>{0}с</color>)</color>",
   "GamblerGet.LowVision": "<color=#ffffff><color=#ffa500>Эффект:</color> Уменьшенное зрение (<color=#ffa500>{1}x</color>, на <color=#ffa500>{0}с</color>)</color>",
   "GamblerGet.HighKCD": "<color=#ffffff><color=#ffa500>Эффект:</color> Увеличенный откат убийства (<color=#ffa500>{0}с</color>)</color>",
+  "Patroller": "Patroller",
+  "PatrollerInfo": "У тебя в каждой комнате есть буст",
+  "PatrollerInfoLong": "(Нейтральный Убийца):\\nКак Patroller, в каждой комнате на карте вы получаете определённый буст.\\nБусты по комнатам распределяются каждую новую игру случайным образом.\\nТак, один раз за раунд вы можете использовать люк.\\n\\nЕсли включена настройка, то бусты вы видите, погладив питомца.",
+  "PatrollerNotifyNoBoost": "Вы сейчас в <color=#00ffa5>{0}</color>\\nВ этой комнате у вас <#ff0000>нету бустов</color>",
+  "PatrollerBoost.Speed": "у вас <color=#00ffa5>повышенная скорость</color>",
+  "PatrollerBoost.Vision": "у вас <color=#00ffa5>улучшенное зрение</color>",
+  "PatrollerBoost.Cooldown": "у вас <color=#00ffa5>уменьшенный откат убийства</color>",
+  "PatrollerBoost.Vent": "<color=#00ffa5>вы можете прыгать в люки</color>",
+  "PatrollerBoost.Range": "у вас <color=#00ffa5>повышенная дальность убийства</color>",
+  "PatrollerBoost.Sabotage": "<color=#00ffa5>вы можете саботировать</color>",
   "Hitman": "Hitman",
   "HitmanInfo": "Выбери свою цель и убей",
   "HitmanInfoLong": "(Предатель):\\nHitman может морфнуться в кого-то, чтобы избрать его своей целью. Если Hitman успешно убьёт назначенную цель, его откат убийства на следующее убийство станет ниже.\\n\\nПримечание: Hitman не может изменить уже назначенную цель, пока она жива. Если цель назначена, он не сможет никого убить кроме неё. До назначения цели он может убивать кого угодно.",
@@ -3317,7 +3328,7 @@
   "ExpressSpeedDur": "Длительность ускорения",
   "NiceSwapper": "Swapper",
   "NiceSwapperInfo": "Меняй голоса игроков",
-  "NiceSwapperInfoLong": "(Член Экипажа):\\nКак Swapper, вы можете использовать команду <b>/sw <color=#0000ff>[ID игрока]</color></b>, чтобы выбрать определённого игрока. Чтобы выбрать двух, нужно написать эту команду 2 раза. В конце собрания все голоса за этих игроков поменяются местами.\\nВы видите ID всех игроков <color=#0000ff>ID</color>около их никнейма.\\n\\nК примеру, если три игрока проголосовали за красного, а пятеро других - за жёлтого, но вы свапнули их голоса, тогда красный получит 5 голосов, а жёлтый - 3.\\n\\nВ связи с ванильными ограничениями, голос хоста будет отображаться как неизменённый визуально, но на самом деле он тоже свапнется.",
+  "NiceSwapperInfoLong": "(Член Экипажа):\\nКак Swapper, вы можете использовать команду <b>/sw <color=#0000ff>[ID игрока]</color></b>, чтобы выбрать определённого игрока. Чтобы выбрать двух, нужно написать эту команду 2 раза. В конце собрания все голоса за этих игроков поменяются местами.\\nВы видите ID всех игроков <color=#0000ff>ID</color> около их никнейма.\\n\\nК примеру, если три игрока проголосовали за красного, а пятеро других - за жёлтого, но вы свапнули их голоса, тогда красный получит 5 голосов, а жёлтый - 3.\\n\\nВ связи с ванильными ограничениями, голос хоста будет отображаться как неизменённый визуально, но на самом деле он тоже свапнется.",
   "NiceSwapperMax": "Изначальное кол-во обменов",
   "NiceSwapperTrialMax": "У вас не осталось обменов!",
   "CanSwapSelfVotes": "<color=#922348>Swapper</color> может свапнуть себя",
@@ -3993,7 +4004,7 @@
   "PickpocketGetVote": "Вы получили {0} голосов(-а)",
   "VultureArrowsPointingToDeadBody": "На трупы указывают стрелки",
   "VultureNumberOfReportsToWin": "Кол-во съеденных трупов для победы",
-  "VultureReportBody": "Труп съеден!",
+  "VultureBodyReported": "Труп съеден!",
   "VultureEatButtonText": "Съесть",
   "VultureReportCooldown": "Откат съедения",
   "VultureMaxEatenInOneRound": "Макс. съедений за раунд",
