--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4006,7 +4006,7 @@
   "PickpocketGetVote": "You've got {0} votes",
   "VultureArrowsPointingToDeadBody": "Arrows pointing to dead bodies",
   "VultureNumberOfReportsToWin": "Bodies needed to win",
-  "VultureReportBody": "Body eaten!",
+  "VultureBodyReported": "Body eaten!",
   "VultureEatButtonText": "Consume",
   "VultureReportCooldown": "Eat Cooldown",
   "VultureMaxEatenInOneRound": "Maximum eaten bodies possible per round",
