--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -304,7 +304,6 @@
   "Knighted": "Knighted",
   "Unreportable": "Disregarded",
   "Contagious": "Contagious",
-  "Rogue": "Rogue",
   "Lucky": "Lucky",
   "Unlucky": "Unlucky",
   "DoubleShot": "Double Shot",
@@ -362,7 +361,6 @@
   "Prefix.Onbound": "Onbound",
   "Prefix.Knighted": "Knighted",
   "Prefix.Unreportable": "Disregarded",
-  "Prefix.Rogue": "Rogue",
   "Prefix.Lucky": "Lucky",
   "Prefix.DoubleShot": "Double Shot",
   "Prefix.Rascal": "Rascal",
@@ -829,7 +827,6 @@
   "UnreportableInfoLong": "(Add-ons):\\nWith the Disregarded add-on, your corpse cannot be reported.",
   "HasteInfoLong": "(Add-ons):\\nWith the Haste add-on, your kill cooldown continues to go down at all times.",
   "ContagiousInfoLong": "(Betrayal Add-ons):\\nWhen the Virus infects you, you become contagious.\\nContagious players are on the Virus team.\\n\\nWhether or not you die after a meeting depends on the settings for the Virus.",
-  "RogueInfoLong": "(Betrayal Add-ons):\\nAs the Rogue, you work against your team and work with other Rogues.\\n\\nYou cannot win with your original team.",
   "LuckyInfoLong": "(Add-ons):\\nWith the Lucky add-on there is a probability for you to evade the kill, the specific probability is set by the host. When the evasion takes effect, the killer will see the shield-animation, but you not know anything.",
   "DoubleShotInfoLong": "(Add-ons):\\nWhen a player with Double Shot guesses a role incorrectly, they will get a second chance to guess, but the next wrong guess will result in suicide.",
   "RascalInfoLong": "(Add-ons):\\nAs the Rascal, you can die to the Sheriff and Snitch can find you if Snitch can find madmates.\\n\\nOnly assigned to Crewmates, cannot be assigned by the Merchant.",
@@ -1346,9 +1343,6 @@
   "ImpCanBeTrapper": "<color=#ff1919>Impostors</color> can become <color=#5a8fd0>Beartrap</color>",
   "CrewCanBeTrapper": "<color=#8cffff>Crewmates</color> can become <color=#5a8fd0>Beartrap</color>",
   "NeutralCanBeTrapper": "<color=#ffab1b>Neutrals</color> can become <color=#5a8fd0>Beartrap</color>",
-  "ImpCanBeRogue": "<color=#ff1919>Impostors</color> can become <color=#696969>Rogue</color>",
-  "CrewCanBeRogue": "<color=#8cffff>Crewmates</color> can become <color=#696969>Rogue</color>",
-  "NeutralCanBeRogue": "<color=#ffab1b>Neutrals</color> can become <color=#696969>Rogue</color>",
   "RogueKnowEachOtherRoles": "<color=#696969>Rogues</color> know the roles of each other",
   "RogueKnowEachOther": "<color=#696969>Rogues</color> know each other",
   "ImpCanBeGravestone": "<color=#ff1919>Impostors</color> can become <color=#2EA8E7>Gravestone</color>",
@@ -3408,6 +3402,28 @@
   "BenefactorTargetGotShieldNotify": "You got a temporary shield as the task\\nyou completed was marked by the Benefactor!",
   "BenefactorTaskMarked": "Task marked",
   "TaskMarkPerRound": "Maximum Number of Tasks Marked Each Round",
+  "Rogue": "Rogue",
+  "RogueInfo": "Complete Objectives, Get Rewards",
+  "RogueInfoLong": "(Neutral):\\nAs the Rogue, you get an objective with a reward each round. You can optionally complete the objective to get the reward.",
+  "Rogue.Objective.KillInSpecificRoom": "Kill someone in {0}",
+  "Rogue.Objective.VentXTimes": "Vent {0} times",
+  "Rogue.Objective.CallEmergencyMeeting": "Call an emergency meeting",
+  "Rogue.Objective.KillSpecificPlayer": " Kill {0}",
+  "Rogue.Objective.KillXTimes": "Kill {0} times",
+  "Rogue.Objective.DontStopWalking": "Don't stop walking",
+  "Rogue.Objective.FixSabotage": "Fix a sabotage",
+  "Rogue.Reward.DisableDevices": "Disable all devices for the rest of the game",
+  "Rogue.Reward.Morph": "Ability to turn into a random crewmate (by sab/pet) for 15s",
+  "Rogue.Reward.IncreasedSpeed": "Increased speed by 0.5x for the rest of the game",
+  "Rogue.Reward.DecreasedKillCooldown": "Kill cooldown cut in half",
+  "Rogue.Reward.Sabotage": "Ability to sabotage for the rest of the game",
+  "Rogue.Reward.Shield": "Invincibility for the rest of the game",
+  "Rogue.Reward.LongReach": "Longest kill range for the rest of the game",
+  "Rogue.Reward.HelpfulAddon": "Get a random helpful add-on",
+  "Rogue.Reward.ImpostorVision": "Impostor vision for the rest of the game",
+  "Rogue.Task": "Objective: <#ffff00>{0}</color>\nReward: <#00ffa5>{1}</color>",
+  "Rogue.TaskCompleted": "<#00ff00>Objective Completed</color>",
+  "Rogue.AllTasksCompleted": "<#00ff00>All Objectives Completed</color>",
   "FFA": "Free For All",
   "ModeFFA": "Gamemode: FFA",
   "ModeDescribe.FFA": "In the FFA (Free For All) gamemode, everyone is a killer and everyone can kill anyone. The last player alive wins!\\n\\nSome random events make this even more fun in the mean time!",
@@ -3815,6 +3831,10 @@
   "OptionAvenger": "Can sell Avenger",
   "TwisterCooldown": "Twist Cooldown",
   "TwisterButtonText": "Twist",
+  "Sleep": "Sleep",
+  "SleepInfo": "You Sleep During Lights Out",
+  "SleepInfoLong": "(Add-ons):\\nYou sleep during lights out. You can't see anything, and you cannot move. You can only wake up when the lights are back on. If someone with the Glow add-on comes near you, you fully wake up and lose this add-on.",
+  "Prefix.Sleep": "Sleeping",
   "ParityCopTryHideMsg": "Hide <color=#0D57AF>Inspector</color>'s commands",
   "MaxParityCheckLimit": "Max inspections per game",
   "ParityCheckLimitPerMeeting": "Max inspections per meeting",
@@ -4128,7 +4148,6 @@
   "WinnerRoleText.NSerialKiller": "Serial Killer Wins!",
   "WinnerRoleText.Juggernaut": "Juggernaut Wins!",
   "WinnerRoleText.Infectious": "Infectious Wins!",
-  "WinnerRoleText.Rogue": "Mavericks Win!",
   "WinnerRoleText.Virus": "Virus Wins!",
   "WinnerRoleText.Phantom": "Specter Wins!",
   "WinnerRoleText.Jinx": "Jinx Wins!",
