--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -1343,6 +1343,8 @@
   "ImpCanBeTrapper": "<color=#ff1919>Предатели</color> могут стать <color=#5a8fd0>Beartrap</color>",
   "CrewCanBeTrapper": "<color=#8cffff>Члены Экипажа</color> могут стать <color=#5a8fd0>Beartrap</color>",
   "NeutralCanBeTrapper": "<color=#ffab1b>Нейтралы</color> могут стать <color=#5a8fd0>Beartrap</color>",
+  "RogueKnowEachOtherRoles": "<color=#696969>Rogue</color> знают роли друг друга",
+  "RogueKnowEachOther": "<color=#696969>Rogue</color> знают друг друга",
   "ImpCanBeGravestone": "<color=#ff1919>Предатели</color> могут стать <color=#2EA8E7>Gravestone</color>",
   "CrewCanBeGravestone": "<color=#8cffff>Члены Экипажа</color> могут стать <color=#2EA8E7>Gravestone</color>",
   "NeutralCanBeGravestone": "<color=#ffab1b>Нейтралы</color> могут стать <color=#2EA8E7>Gravestone</color>",
@@ -1724,7 +1726,7 @@
   "UndertakerInfoLong": "(Предатель):\\nКак Undertaker, вы можете пометить свою цель, используя кнопку убийства, а затем морфнуться/погладить питомца, чтобы убить его. Труп убитого вами игрока телепортируется туда, где вы морфнулись/погладили питомца.",
   "Romantic": "Romantic",
   "RomanticInfo": "Выберите партнёра и выиграйте с ним!",
-  "RomanticInfoLong": "(Добрый Нейтрал):\\nКак Romantic, вы можете использовать свою кнопку убийства на ком-то, чтобы избрать его своим партнёром.\\nПосле этого, когда вы будете использовать свою кнопку убийства на ком-либо, вашему партнёру будет даваться временный щит.\\nВы выигрываете, если ваш партнёр выигрывает.\\n\\nЕсли ваш партнёр умрёт, то, в зависимости от роли партнёра, вы превратитесь в следующую роль:\\n1. Если ваш партнёр был предателем, то вы станете Renegade\\n2. Если ваш партнёр был членом экипажа с кнопкой убийства, то вы станете его ролью\\n3. Если ваш партнёр был членом экипажа без кнопки убийства, то вы превратитесь в Vengeful Romantic\\n4. Если ваш партнёр был нейтральным убийцей, то вы станете его роль\\n5. Если ваш партнёр был не убивающим нейтралом, если ваш партнёр умер сам (убился/суицид) или если ваш партнёр погиб иным способом, но не подходит под предыдущие критерии, то вы првератитесь в Ruthless Romantic.\\n\\nЦель <b><color=#ba2749>Vengeful Romantic</color></b> - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу своего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.\\n\\nЦель <b><color=#D2691E>Ruthless Romantic</color></b> - убить всех. В таком случае он победит вместе с партнёром.",
+  "RomanticInfoLong": "(Добрый Нейтрал):\\nКак Romantic, вы можете использовать свою кнопку убийства на ком-то, чтобы избрать его своим партнёром.\\nПосле этого, когда вы будете использовать свою кнопку убийства на ком-либо, вашему партнёру будет даваться временный щит.\\nВы выиграете, если ваш партнёр выиграет.\\n\\nЕсли ваш партнёр умрёт, то, в зависимости от роли и причины его смерти, с вашей ролью случится одно из следующего:\\n1. Если ваш партнёр был предателем, то вы станете Renegade\\n2. Если ваш партнёр был членом экипажа с кнопкой убийства или нейтральным убийцей, то вы станете его ролью\\n3. Если ваш партнёр был членом экипажа без кнопки убийства, то вы превратитесь в Vengeful Romantic\\n5. Если ваш партнёр был не-убивающим нейтралом, если ваш партнёр умер сам (убился/суицид) или если ваш партнёр погиб иным способом, но не подходит под предыдущие критерии, то вы првератитесь в Ruthless Romantic.\\n\\nЦель <b><color=#ba2749>Vengeful Romantic</color></b> - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу своего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.\\n\\nЦель <b><color=#D2691E>Ruthless Romantic</color></b> - убить всех. В таком случае он победит вместе с партнёром.",
   "VengefulRomantic": "Vengeful Romantic",
   "VengefulRomanticInfo": "Убей убийцу твоего партнёра!",
   "VengefulRomanticInfoLong": "(Нейтрал):\\nЦель Vengeful Romantic - отомстить убийце своего партнёра. Если вы успешно убьёте убийцу вашего партнёра, то вы и ваш партнёр выиграют с любой победившей командой. Если вы попытаетесь убить кого-то ещё, то совершите суицид.",
@@ -3399,6 +3401,28 @@
   "BenefactorTargetGotShieldNotify": "Вы получили временный щит, так как\\nвыполнили таск, отмеченный Benefactor'ом!",
   "BenefactorTaskMarked": "Таск отмечен",
   "TaskMarkPerRound": "Макс. отмеченных тасков за раунд",
+  "Rogue": "Rogue",
+  "RogueInfo": "Получайте награды за выполнение миссий",
+  "RogueInfoLong": "(Нейтральный Убийца):\\nКак Rogue, каждый раунд вам объявляется миссия с определённой наградой. При выполнении миссии вам выдадут вашу награду (награды могут различаться).",
+  "Rogue.Objective.KillInSpecificRoom": "Убейте кого-то в течение {0}",
+  "Rogue.Objective.VentXTimes": "Прыгните в люк {0} раз",
+  "Rogue.Objective.CallEmergencyMeeting": "Вызовите собрание",
+  "Rogue.Objective.KillSpecificPlayer": " Убейте {0}",
+  "Rogue.Objective.KillXTimes": "Убейте {0} раз",
+  "Rogue.Objective.DontStopWalking": "Не останавливайтесь при ходьбе",
+  "Rogue.Objective.FixSabotage": "Почините саботаж",
+  "Rogue.Reward.DisableDevices": "До конца игры все устройства будут выключены",
+  "Rogue.Reward.Morph": "Возможность морфнуться (с помощью саба/пета) на 15 с",
+  "Rogue.Reward.IncreasedSpeed": "Увеличенная скорость на 0,5x до конца игры",
+  "Rogue.Reward.DecreasedKillCooldown": "Откат убийства в два раза меньше",
+  "Rogue.Reward.Sabotage": "Способность саботировать",
+  "Rogue.Reward.Shield": "Щит до конца игры",
+  "Rogue.Reward.LongReach": "Длиннейшая дистанция убийства до конца игры",
+  "Rogue.Reward.HelpfulAddon": "Рандомный полезный атрибут",
+  "Rogue.Reward.ImpostorVision": "Зрение Предателей до конца игры",
+  "Rogue.Task": "Миссия: <#ffff00>{0}</color>\\nНаграда: <#00ffa5>{1}</color>",
+  "Rogue.TaskCompleted": "<#00ff00>Миссия выполнена</color>",
+  "Rogue.AllTasksCompleted": "<#00ff00>Все миссии выполнены</color>",
   "FFA": "Free For All",
   "ModeFFA": "Режим игры: FFA",
   "ModeDescribe.FFA": "В режиме FFA (Free For All) цель всех игроков - убить всех остальных. Последний выживший побеждает!\\n\\nВ зависимости от настроек, могут происходить разные дополнительные ивенты. Также, в зависимости от настроек, игроки могут делиться на команды (у сокомандников одинаковый цвет никнейма), в таком случае цель любой команды - убить всех остальных.",
@@ -3805,6 +3829,10 @@
   "OptionAvenger": "Может продать атрибут Avenger",
   "TwisterCooldown": "Откат твиста",
   "TwisterButtonText": "Твист",
+  "Sleep": "Sleep",
+  "SleepInfo": "Ты засыпаешь во время саботажа света",
+  "SleepInfoLong": "(Атрибут):\\nВо время саботажа света вы засыпаете. Вы не сможете двигаться и ваше зрение будет равно нулю. Если кто-то с атрибутом Glow пройдёт мимо вас, то атрибут Sleep полностью исчезнет.",
+  "Prefix.Sleep": "Sleeping",
   "ParityCopTryHideMsg": "Спрятать команды <color=#0D57AF>Inspector</color>'а",
   "MaxParityCheckLimit": "Макс. сравнений",
   "ParityCheckLimitPerMeeting": "Макс. сравнений за собрание",
