Start making the settings actually work

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -78,6 +78,12 @@
   "ROT.AddonType.Helpful": "★ Helpful Add-ons",
   "ROT.AddonType.Harmful": "★ Harmful Add-ons",
   "ROT.AddonType.Mixed": "★ Mixed Add-ons",
+  "CTA.TeamEnabled": "Enable {0} Team",
+  "CTA.KnowRoles": "Players Know Each Others' Roles",
+  "CTA.WinWithOriginalTeam": "Players Can Win With Their Original Team",
+  "CTA.KillEachOther": "Players Can Kill Each Other",
+  "CTA.GuessEachOther": "Players Can Guess Each Other",
+  "CTA.Arrows": "Players Have Arrow Pointing Towards Each Other",
   "GM": "Game Master",
   "Sunnyboy": "Sunnyboy",
   "Bard": "Bard",
