--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -78,6 +78,12 @@
   "ROT.AddonType.Helpful": "★ Полезные атрибуты ★",
   "ROT.AddonType.Harmful": "★ Вредные атрибуты ★",
   "ROT.AddonType.Mixed": "★ Смешанные атрибуты ★",
+  "CTA.TeamEnabled": "Включить команду ''{0}''",
+  "CTA.KnowRoles": "Участники команды знают роли друг друга",
+  "CTA.WinWithOriginalTeam": "Участники команды могут выиграть с командой их роли",
+  "CTA.KillEachOther": "Участники команды могут убивать друг друга",
+  "CTA.GuessEachOther": "Участники команды могут гадать друг друга",
+  "CTA.Arrows": "Участники команды видят стрелки друг на друга",
   "GM": "Spectator",
   "Sunnyboy": "Sunnyboy",
   "Bard": "Bard",
@@ -1343,8 +1349,8 @@
   "ImpCanBeTrapper": "<color=#ff1919>Предатели</color> могут стать <color=#5a8fd0>Beartrap</color>",
   "CrewCanBeTrapper": "<color=#8cffff>Члены Экипажа</color> могут стать <color=#5a8fd0>Beartrap</color>",
   "NeutralCanBeTrapper": "<color=#ffab1b>Нейтралы</color> могут стать <color=#5a8fd0>Beartrap</color>",
-  "RogueKnowEachOtherRoles": "<color=#696969>Rogue</color> знают роли друг друга",
-  "RogueKnowEachOther": "<color=#696969>Rogue</color> знают друг друга",
+  "RogueKnowEachOtherRoles": "<color=#696969>Rogue</color> игроки знают роли друг друга",
+  "RogueKnowEachOther": "<color=#696969>Rogue</color> игроки знают друг друга",
   "ImpCanBeGravestone": "<color=#ff1919>Предатели</color> могут стать <color=#2EA8E7>Gravestone</color>",
   "CrewCanBeGravestone": "<color=#8cffff>Члены Экипажа</color> могут стать <color=#2EA8E7>Gravestone</color>",
   "NeutralCanBeGravestone": "<color=#ffab1b>Нейтралы</color> могут стать <color=#2EA8E7>Gravestone</color>",
@@ -3133,6 +3139,7 @@
   "PatrollerInfo": "У тебя в каждой комнате есть буст",
   "PatrollerInfoLong": "(Нейтральный Убийца):\\nКак Patroller, в каждой комнате на карте вы получаете определённый буст.\\nБусты по комнатам распределяются каждую новую игру случайным образом.\\nТак, один раз за раунд вы можете использовать люк.\\n\\nЕсли включена настройка, то бусты вы видите, погладив питомца.",
   "PatrollerNotifyNoBoost": "Вы сейчас в <color=#00ffa5>{0}</color>\\nВ этой комнате у вас <#ff0000>нету бустов</color>",
+  "PatrollerNotify": "Вы в комнате <color=#00ffa5>{0}</color>\\nВ этой комнате {1}",
   "PatrollerBoost.Speed": "у вас <color=#00ffa5>повышенная скорость</color>",
   "PatrollerBoost.Vision": "у вас <color=#00ffa5>улучшенное зрение</color>",
   "PatrollerBoost.Cooldown": "у вас <color=#00ffa5>уменьшенный откат убийства</color>",
@@ -3497,6 +3504,7 @@
   "HNS.MaxNeutrals": "<#0000ff>Макс.</color> кол-во <#ffab1b>Нейтралов</color>",
   "HNS.DangerMeter": "Показывать (Модовый) Измеритель Опасности",
   "HNS.PlayersSeeRoles": "Игроки видят роли друг друга",
+  "HNS.TaskCount": "Таски:",
   "SubText.HideAndSeek": "ИЩИ ИЛИ ПРЯЧЬСЯ",
   "TimeLeft": "Осталось времени",
   "MinutesLeft": "{0} <color=#00ffa5>Минут осталось</color>",
