Finish everything & fix stuff with Rogue

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -78,7 +78,8 @@
   "ROT.AddonType.Helpful": "★ Helpful Add-ons",
   "ROT.AddonType.Harmful": "★ Harmful Add-ons",
   "ROT.AddonType.Mixed": "★ Mixed Add-ons",
-  "CTA.TeamEnabled": "Enable {0} Team",
+  "CTA.TeamEnabled.Prefix": "Enable ",
+  "CTA.TeamEnabled.Suffix": " ",
   "CTA.KnowRoles": "Players Know Each Others' Roles",
   "CTA.WinWithOriginalTeam": "Players Can Win With Their Original Team",
   "CTA.KillEachOther": "Players Can Kill Each Other",
@@ -3415,7 +3416,7 @@
   "Rogue.Objective.KillInSpecificRoom": "Kill someone in {0}",
   "Rogue.Objective.VentXTimes": "Vent {0} times",
   "Rogue.Objective.CallEmergencyMeeting": "Call an emergency meeting",
-  "Rogue.Objective.KillSpecificPlayer": " Kill {0}",
+  "Rogue.Objective.KillSpecificPlayer": "Kill {0}",
   "Rogue.Objective.KillXTimes": "Kill {0} times",
   "Rogue.Objective.DontStopWalking": "Don't stop walking",
   "Rogue.Objective.FixSabotage": "Fix a sabotage",
