Translating & Fixing Translation
Finally I found all missing strings!

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -78,7 +78,8 @@
   "ROT.AddonType.Helpful": "★ Полезные атрибуты ★",
   "ROT.AddonType.Harmful": "★ Вредные атрибуты ★",
   "ROT.AddonType.Mixed": "★ Смешанные атрибуты ★",
-  "CTA.TeamEnabled": "Включить команду ''{0}''",
+  "CTA.TeamEnabled.Prefix": "Включить ",
+  "CTA.TeamEnabled.Suffix": " ",
   "CTA.KnowRoles": "Участники команды знают роли друг друга",
   "CTA.WinWithOriginalTeam": "Участники команды могут выиграть с командой их роли",
   "CTA.KillEachOther": "Участники команды могут убивать друг друга",
@@ -1357,7 +1358,7 @@
   "TimeThiefDecreaseMeetingTime": "Уменьшить время собрания на",
   "TimeThiefLowerLimitVotingTime": "Мин. длительность собрания",
   "TimeThiefReturnStolenTimeUponDeath": "Вернуть украденное время после смерти <color=#ff1919>Time Thief</color>",
-  "EvilTrackerCanSeeKillFlash": "Может видеть вспышку убийства",
+  "EvilTrackerCanSeeKillFlash": "Видит вспышку, когда тиммейт убивает",
   "EvilTrackerResetTargetAfterMeeting": "Может сбросить цель после собрания",
   "EvilTrackerCanSeeLastRoomInMeeting": "Может видеть комнату, в которой была цель до собрания",
   "TrackerCanGetArrowColor": "Может видеть цветные стрелки",
@@ -1485,7 +1486,7 @@
   "DeactivationImmediately": "Сразу",
   "DeactivationAfterMeeting": "После собрания",
   "DeactivationIsVisibleOFF": "<color=#ff4c6f>ВЫКЛ</color>",
-  "MedicResetCooldown": "При попытке убийства, сбросить откат убийства на",
+  "MedicResetCooldown": "При попытке убийства, сбросить откат убийства до",
   "MedicShieldedCanBeGuessed": "Игрока с щитом <color=#00ff97>Medic</color>'а можно угадать",
   "MedicShieldBreaksOnKillAttempt": "Щит <color=#00ff97>Medic</color>'а разрушается при попытке убийства",
   "MedicShieldBreakIsVisible": "Защищённый и <color=#00ff97>Medic</color> видят деактивацию щита",
@@ -1868,6 +1869,7 @@
   "EGGuessSnitchTaskDone": "Хорошая попытка, плоскоголовый умник! НО!... 1. Тебя спалили; 2. Даже если бы не спалили, игра бы этого не засчитала; 3. Это раскрытый Snitch, его нельзя угадать; 4. Готовься к выкидыванию, потому что пункт 1. \\nВсего наилучшего!",
   "GuessDoubleShot": "Вы ошиблись. Однако, ваш атрибут даёт вам второй шанс! Думайте иначе.",
   "LaughToWhoGuessSelf": "Так, ты попытался угадать того, кто попытался угадать себя. Ой, это ж ты. xD",
+  "GuessSameCTAPlayer": "Кто глупее: глупец или тот, кто за ним следует? Правильный ответ: ты, потому что ты попытался угадать игрока своей же команды. Не делай так больше.",
   "GuessDisabled": "Извините, настройки не позволяют вам гадать...",
   "GuessWorkaholic": "Угадать раскрытого Workaholic'а слишком нечестно, чтобы позволять вам сделать это.",
   "GuessDoctor": "Извините, но гадать раскрытого Doctor'а слегка нечестно, не думали?",
@@ -2008,7 +2010,7 @@
   "MerchantTargetImpostor": "Может продавать атрибуты <color=#ff1919>Предателям</color>",
   "MerchantTargetNeutral": "Может продавать атрибуты <color=#ffab1b>Нейтралам</color>",
   "MerchantSellHelpful": "Может продавать <color=#8cffff>Полезные</color> атрибуты",
-  "MerchantSellBalanced": "Может продавать <color=#00ffa5>Смешанные</color> атрибуты",
+  "MerchantSellMixed": "Может продавать <color=#00ffa5>Смешанные</color> атрибуты",
   "MerchantSellOnlyEnabledAddons": "Может продавать только включённые атрибуты",
   "MerchantSellHarmful": "Может продавать <color=#ff1919>Вредные</color> атрибуты",
   "MerchantSellNeutral": "Может продавать атрибуты <color=#ffab1b>Нейтралов</color>",
