--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2254,6 +2254,10 @@
   "ReportButtonText": "Report",
   "VentButtonText": "Vent",
   "SabotageButtonText": "Sabotage",
+  "AbilityButtonText.Shapeshifter": "Shapeshift",
+  "AbilityButtonText.Engineer": "Vent",
+  "AbilityButtonText.Scientist": "Check Vitals",
+  "AbilityButtonText.GuardianAngel": "Protect",
   "GauloisKillButtonText": "Speed Up",
   "SniperSnipeButtonText": "Snipe",
   "FireWorksExplosionButtonText": "Detonate",
