--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -2254,6 +2254,10 @@
   "ReportButtonText": "Репорт",
   "VentButtonText": "Вент",
   "SabotageButtonText": "Саботаж",
+  "AbilityButtonText.Shapeshifter": "Морф",
+  "AbilityButtonText.Engineer": "Вент",
+  "AbilityButtonText.Scientist": "Пульсы",
+  "AbilityButtonText.GuardianAngel": "Защитить",
   "GauloisKillButtonText": "Скорость",
   "SniperSnipeButtonText": "Выстрел",
   "FireWorksExplosionButtonText": "Взорвать",
