--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -210,7 +210,7 @@
   "Jester": "Palhaço",
   "Chemist": "Químico",
   "ChemistInfo": "Misture Produtos Químicos",
-  "ChemistInfoLong": "(Neutros):\n★Como Químico, misture todos os tipos de produtos químicos para produzir gases e itens poderosos. Cada sala do mapa funcionará como ''uma fábrica''. Em cada fábrica você poderá fazer alguns processos que você pega ingredientes e obtêm resultados. (Você pode entrar no duto para obter alguns ingredientes básicos). Trabalhe para obter esses produtos finais, que fazem o seguinte:\n    - Ácido Sulfúrico: Marque alguém com o botão de kill e esse jogador espalhará o ácido para todos que ele encostar. Depois de um tempo, todos os jogadores ''infectados'' morrem.\n    - Gás Metilamina: Entre no duto para cegar todos menos você.\n    - Explosivo: É colocada no corpo da próxima pessoa que você matar. Sempre que tentarem reportar, morrem.\n    - Granada: Coloque a granada em alguém usando o botão de kill. Essa pessoa agora carrega a granada. A granada explode em segundos, matando o jogador com a granada e todos próximos dele.\n\nSe você tiver um produto final pronto para usar, use o botão de kill para usar o produto. Clique UMA vez para usar o produto ou clique DUAS vezes para matar normalmente.",
+  "ChemistInfoLong": "(Neutros):\\n★Como Químico, misture todos os tipos de produtos químicos para produzir gases e itens poderosos. Cada sala do mapa funcionará como ''uma fábrica''. Em cada fábrica você poderá fazer alguns processos que você pega ingredientes e obtêm resultados. (Você pode entrar no duto para obter alguns ingredientes básicos). Trabalhe para obter esses produtos finais, que fazem o seguinte:\\n- ★Ácido Sulfúrico: Marque alguém com o botão de kill e esse jogador espalhará o ácido para todos que ele encostar. Depois de um tempo, todos os jogadores ''infectados'' morrem.\\n- ★Gás Metilamina: Entre no duto para cegar todos menos você.\\n- ★Explosivo: É colocada no corpo da próxima pessoa que você matar. Sempre que tentarem reportar, morrem.\\n- ★Granada: Coloque a granada em alguém usando o botão de kill. Essa pessoa agora carrega a granada. A granada explode em segundos, matando o jogador com a granada e todos próximos dele.\\n\\n★Se você tiver um produto final pronto para usar, use o botão de kill para usar o produto. Clique UMA vez para usar o produto ou clique DUAS vezes para matar normalmente.",
   "Chemist.Item.Air": "Ar",
   "Chemist.Item.BaseMineralOil": "Óleo Mineral Básico",
   "Chemist.Item.Coal": "Carvão",
@@ -224,12 +224,12 @@
   "Chemist.Item.ThermalWater": "Água Termal",
   "Chemist.Item.Water": "Água",
   "Chemist.Item.IronOre": "Minério de Ferro",
-  "Chemist.Item.Explosive.Usage": "Usos do Explosivo",
-  "Chemist.Item.Grenade.Usage": "Usos da Granada",
-  "Chemist.Item.SulfuricAcid.Usage": "Usos do Ácido Sulfúrico",
-  "Chemist.Item.MethylamineGas.Usage": "Usos do Gás Metilamina",
-  "Chemist.AirGainedPerSecond": "Quantidade de ar ganho por entrar no duto",
-  "Chemist.WaterGainedPerSecond": "Quantidade de água ganha por entrar no duto",
+  "Chemist.Item.Explosive.Usage": "Quantidade de Explosivos perdidos ao usar",
+  "Chemist.Item.Grenade.Usage": "Quantidade de Granadas perdidas ao usar",
+  "Chemist.Item.SulfuricAcid.Usage": "Quantidade de Ácido Sulfúrico perdido ao usar",
+  "Chemist.Item.MethylamineGas.Usage": "Quantidade de Gás Metilamina perdido ao usar",
+  "Chemist.AirGainedPerSecond": "Quantidade de ar ganho por segundo",
+  "Chemist.WaterGainedPerSecond": "Quantidade de água ganha por segundo",
   "Chemist.CoalGainedPerVent": "Quantidade de carvão ganho por entrar no duto",
   "Chemist.IronOreGainedPerVent": "Quantidade de ferro ganho por entrar no duto",
   "Chemist.AcidPlayersDie": "Jogadores com o ácido morrem",
@@ -237,6 +237,20 @@
   "Chemist.BlindDuration": "Duração da Cegueira",
   "Chemist.GrenadeExplodeDelay": "Tempo até explodir",
   "Chemist.GrenadeExplodeRadius": "Raio de Explosão",
+  "Simon": "Mestre",
+  "SimonInfo": "Dê ordens aos jogadores",
+  "SimonInfoLong": "(Neutros):\\n★Como Mestre, você pode dar ordens aos jogadores (Mestre Mandou).\\n★Clique uma vez em alguém com o botão de matar para marcar esse jogador ou clique duas vezes para matar.\\n★Use o duto para ORDENAR todos os jogadores marcados. Os jogadores com botão de matar serão ordenados a matar, enquanto os tripulantes serão ordenados a completar uma tarefa. Se não seguirem as ordens até à próxima reunião, morrerão.\\n★Você pode sabotar/acariciar seu pet para trocar as ordens. Isso significa que ao trocar as ordens, você trocará se a pessoa TERÁ QUE CUMPRIR, ou NÃO PODERÁ CUMPRIR.",
+  "SimonKill": "Mestre Mandou: <#ffff00>Você NÃO deve usar o seu botão de matar antes da próxima reúnião</color>",
+  "SimonTask": "Mestre Mandou: <#ffff00>Você deve completar uma tarefa antes da próxima reunião</color>",
+  "SimonDontKill": "Mestre Mandou: <#ffff00>Você NÃO deve usar o seu botão de matar antes da próxima reúnião</color>",
+  "SimonDontTask": "Mestre Mandou: <#ffff00>Você NÃO deve completar nenhuma tarefa antes da próxima reunião</color>",
+  "SimonDoShort": "<#ff0000>Deve cumprir a Ordem</color>",
+  "SimonDontShort": "<#ffa500>Não deve cumpriri a Ordem</color>",
+  "SimonDoMode": "<#00ffa5>Modo:</color> Mestre MANDOU",
+  "SimonDontMode": "<#00ffa5>Modo:</color> Mestre NÃO Mandou",
+  "Goose": "Ganso",
+  "GooseInfo": "Grasne a outros jogadores para irritar eles",
+  "GooseInfoLong": "(Crewmates):\\n★Como Ganso, você pode grasnar a outros jogadores para irritar eles.\\n★Você pode arrastar eles e desabilitar as habilidades deles ao grasnar.",
   "Arsonist": "Pirômano",
   "Terrorist": "Terrorista",
   "Executioner": "Executor",
