Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3414,6 +3414,11 @@
   "BenefactorTargetGotShieldNotify": "You got a temporary shield as the task\\nyou completed was marked by the Benefactor!",
   "BenefactorTaskMarked": "Task marked",
   "TaskMarkPerRound": "Maximum Number of Tasks Marked Each Round",
+  "Shifter": "Shifter",
+  "ShifterInfo": "Steal Someone's Role",
+  "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your kill button on them. Depending on the settings, you may also steal their progress in their role and ability uses, and their add-ons.\\nIf you have this role when the game ends, you lose!",
+  "Shifter.StealAddons": "Steal Add-ons",
+  "Shifter.StealProgress": "Steal Progress",
   "Rogue": "Rogue",
   "RogueInfo": "Complete Objectives, Get Rewards",
   "RogueInfoLong": "(Neutral):\\nAs the Rogue, you get an objective with a reward each round. You can optionally complete the objective to get the reward.",
