--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -250,7 +250,7 @@
   "SimonDontMode": "<#00ffa5>Modo:</color> Mestre NÃO Mandou",
   "Goose": "Ganso",
   "GooseInfo": "Grasne a outros jogadores para irritar eles",
-  "GooseInfoLong": "(Crewmates):\\n★Como Ganso, você pode grasnar a outros jogadores para irritar eles.\\n★Você pode arrastar eles e desabilitar as habilidades deles ao grasnar.",
+  "GooseInfoLong": "(Tripulantes):\\n★Como Ganso, você pode grasnar a outros jogadores para irritar eles.\\n★Você pode arrastar eles e desabilitar as habilidades deles ao grasnar.",
   "Arsonist": "Pirômano",
   "Terrorist": "Terrorista",
   "Executioner": "Executor",
