Add Energetic (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1524,6 +1524,10 @@
   "CanCountNeutralKiller": "When <color=#8cffff>Crewmates</color> win by killing a <color=#ffab1b>Neutral</color> player, they can snatch the victory",
   "OddKillCooldown": "Odd-Numbered kill cooldown",
   "EvenKillCooldown": "Even-Numbered kill cooldown",
+  "Energetic": "Energetic",
+  "EnergeticInfo": "Your Ability Cooldown is Lower",
+  "EnergeticInfoLong": "(Add-ons):\\nAs the Energetic, the cooldown of your ability is reduced by 25%.",
+  "Prefix.Energetic": "Energetic",
   "Evolver": "Evolver",
   "EvolverInfo": "Select an Upgrade After Each Meeting",
   "EvolverInfoLong": "(Neutrals):\\nAs the Evolver, you can choose an upgrade after each meeting. Pet to cycle between the available upgrades. The same upgrade can appear multiple times. Once the timer to pick ends, your upgrade will be applied.\\n\\n<size=70%><b><u>Upgrades:</u></b>\\n- Decrease Kill Cooldown (by 2.5s)\\n- Gain Impostor Vision (unaffected by lights sabotage)\\n- Increase Vision (by 0.4x)\\n- Increase Speed (by 0.25x)\\n- Increase Kill Distance (Short → Medium → Long)\\n- Gain Venting Ability (and 1 use)\\n- Increase Venting Use Limit (by 3)\\n- Gain Sabotage Ability (and 1 use)\\n- Increase Sabotage Use Limit (by 2)\\n- Gain Shield (cannot be killed in the current round)</size>\\n\\n<u><b>Remarks:</b></u>\\nIf you can vent, the number of vent uses you have is displayed next to your role name like this: <b>(V: 1)</b> - Same with the sabotage use limit: <b>(S: 2)</b>",
