Fixes & Try something

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3437,8 +3437,7 @@
   "Shifter": "Shifter",
   "ShifterInfo": "Steal Someone's Role",
   "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your pet button near them. Depending on the settings, you may also steal their progress in their role and ability uses, and their add-ons.\\nIf you have this role when the game ends, you lose!",
-  "Shifter.StealAddons": "Steal Add-ons",
-  "Shifter.StealProgress": "Steal Progress",
+  "Shifter.TrySwapBasis": "Swap Role Basis <#ffff00>(EXPERIMENTAL)</color>",
   "Rogue": "Rogue",
   "RogueInfo": "Complete Objectives, Get Rewards",
   "RogueInfoLong": "(Neutral):\\nAs the Rogue, you get an objective with a reward each round. You can optionally complete the objective to get the reward.",
